--- a/index.html
+++ b/index.html
@@ -7,4 +7,18 @@
     <link rel="stylesheet" href="" type="text/css">
     <link rel="stylesheet" href="./css/index.css" type="text/css">
   </head>
+  <body>
+    <div class="section container">
+      <h1>THE BEAUTY OF AFRICAN HERITAGE</h1>
+    </div>
+    <div>
+      <div class="section">
+        <h2>Akan Names</h2>
+        <p>background about akan names</p>
+      </div>
+      <div class="form">
+        
+      </div>
+    </div>
+  </body>
 </html>
