creates the header and description sections of the html page

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <title>Akan Name Generator</title>
-    <link rel="stylesheet" href="" type="text/css">
+    <link rel="stylesheet" href="./css/Bootstrap/bootstrap-5.1.0-dist/css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="./css/index.css" type="text/css">
   </head>
-  <body>
-    <div class="section container">
+  <body class="container-fluid" background="./images/children.jpg";>
+    <div class="section">
       <h1>THE BEAUTY OF AFRICAN HERITAGE</h1>
     </div>
     <div>
-      <div class="section">
+      <div class="section description">
         <h2>Akan Names</h2>
         <p>background about akan names</p>
       </div>
       <div class="form">
-        
+
       </div>
     </div>
   </body>
