makes some test changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </select>
           <br>
           <br>
-          <input type="submit" value="Submit" id="button">
+          <input type="submit" value="Submit" id="button" class="btn btn-primary" onclick="akanGenerator (); return false"/>
           <h3 id="output"></h3>
         </form>
       </div>
