modifies the form in the html page and creates a script.js file

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
         <form id="form">
           <legend>Enter you info below to see your Akan name</legend>
           <fieldset>
-            Date of Birth: <input type="number" id="date">
-            Month of Birth: <input type="number" id="month">
-            Year of Birth: <input type="number" id="year">
-            <select name="dropdown" id="gender">
-              <option value="Male">Male</option>
-              <option value="Female">Female</option>
-            </select>
+            <em>Date of Birth:</em>
+            <input type="number" id="date" placeholder="DD">
+            <input type="number" id="month" placeholder="MM">
+            <input type="number" id="year" placeholder="YYYY">
           </fieldset>
+          <em>Gender:</em>
+          <select name="dropdown" id="gender">
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+          </select>
           <br>
           <br>
           <input type="submit" value="Submit" id="button">
