--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
           <fieldset>
             <em>Date of Birth:</em>
             <input type="number" id="date" placeholder="DD">
-            <input type="number" id="month" placeholder="MM">
+            <select name="dropdown" id="month">
+              <option value="0">Jan</option>
+              <option value="3">Feb</option>
+              <option value="3">Mar</option>
+              <option value="6">Apr</option>
+              <option value="1">May</option>
+              <option value="4">Jun</option>
+              <option value="6">Jul</option>
+              <option value="2">Aug</option>
+              <option value="5">Sep</option>
+              <option value="0">Oct</option>
+              <option value="3">Nov</option>
+              <option value="5">Dec</option>
+            </select>
             <input type="number" id="year" placeholder="YYYY">
           </fieldset>
           <em>Gender:</em>
