adds a rest button that allows the user to reset the form after submitting their DOB details

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
           <br>
           <br>
           <input type="submit" value="Submit" id="button" class="btn btn-primary" onclick="akanGenerator (); return false"/>
-          <h3 id="output"></h3>
+          <input type="reset" value="reset" id="reset" class="btn btn-primary" onclick="resetForm (); return false"/>
+          <h3 id="output" placeholder="Results display here"></h3>
         </form>
       </div>
     </div>
