--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             <option value="Female">Female</option>
           </select>
           <br>
+          <h3 id="output"> Results will display here</h3>
           <br>
           <input type="submit" value="Submit" id="button" class="btn btn-primary" onclick="akanGenerator (); return false"/>
-          <input type="reset" value="reset" id="reset" class="btn btn-primary" onclick="resetForm (); return false"/>
-          <h3 id="output" placeholder="Results display here"></h3>
+          <input type="reset" value="reset" id="reset" class="btn btn-primary" onclick="resetForm();"/>
         </form>
       </div>
     </div>
