adds code in the .js file for validating the form inputs

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
             <option value="Female">Female</option>
           </select>
           <br>
-          <h3 id="output"> Results will display here</h3>
           <br>
           <input type="submit" value="Submit" id="button" class="btn btn-primary" onclick="akanGenerator (); return false"/>
+          <br>
+          <h3 id="output"> Your Akan Name Will Display Here</h3>
           <input type="reset" value="reset" id="reset" class="btn btn-primary" onclick="resetForm();"/>
         </form>
       </div>
