adds the footer and the description in the html page, creates a license file and readme file, and enters information in both

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     <div class="data">
       <div class="section description">
         <h2>Akan Names</h2>
-        <p>background about akan names</p>
+        <p>All over the world, one tradition that every society has in common is the naming of children
+          However, in different societies, the naming systems are different
+          For example, <strong>the Akan people</strong> in Ghana give names their children
+          depending on the day of the week they were born.</p>
+          <p><strong>Sounds fun. Right?</strong></p>
+          <p>The sad fact is that you can barely remember the day you were born</p>
+          <p>Luckily, with our help, <strong> <i>YOUR AKAN NAME IS JUST A CLICK AWAY</i></strong></p>
+          <p id="prompt"> <i>Let's see what you Akan Name would be </i>😇😇😇😇</p>
       </div>
       <div class="form">
         <form id="form">
@@ -38,7 +45,7 @@
             </select>
             <input type="number" id="year" placeholder="YYYY">
           </fieldset>
-          <em>Gender:</em>
+          <em class="gender">Gender:</em>
           <select name="dropdown" id="gender">
             <option value="Male">Male</option>
             <option value="Female">Female</option>
@@ -49,8 +56,12 @@
           <br>
           <h3 id="output"> Your Akan Name Will Display Here</h3>
           <input type="reset" value="reset" id="reset" class="btn btn-primary" onclick="resetForm();"/>
+          <img src="./images/enterDetails.jpeg"  height="100px" alt="laptop">
         </form>
       </div>
+    </div>
+    <div class="copyright">
+      <p id="rights">&copy; Copyright 2021 Kevson</p>
     </div>
   </body>
   <script src="./JavaScript/script.js"></script>
